prowlarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      securityContext:
        fsGroup: 110000
      containers:
        - name: prowlarr
          image: prowlarr-image
          volumeMounts:
            - mountPath: /config
              name: config-volume
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 9696
              protocol: TCP
      volumes:
        - name: data
          nfs:
            server: 192.168.1.31 # IP to our NFS server
            path: /mnt/media # The exported directory
            readOnly: true
        - name: config-volume
          persistentVolumeClaim:
            claimName: prowlarr-config
